  are now rendered as `[< ...] as '_weak1`, `< .. > as '_weak1`,
  and `#ct as '_weak1`.
  (Florian Angeletti, suggestion by Stefan Muenzel, review by Gabriel Scherer)

- #12051: Improve the error messages when type variables cannot be generalized
  (Stefan Muenzel, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #10512: explain the compilation strategy for switches on constructors
  (Gabriel Scherer, review by Vincent Laviron)

- #11990: Improve comments and macros around frame descriptors.
  (Nick Barnes, review by Gabriel Scherer)

- #11847, #11849, #11851, #11898: small refactorings in the type checker
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018, #11869: Clean up Types.Variance, adding a description of
  the lattice used, and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer and Jeremy Yallop)

- #11286, #11515: disambiguate identifiers by using how recently they have
  been bound in the current environment
  (Florian Angeletti, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

- #11536: Introduce wrapper functions for level management
  ([Ctype.with_level], etc) and for type variable scoping
  ([Typetexp.with_local_type_variable_scope]).
  The older API ([Ctype.(begin_def,end_def)], [Typetexp.(narrow,widen)], etc.)
  is now removed.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11568: Encode inline record types in Path.t
  (Leo White and Hyunggyu Jang, review by Gabriel Scherer)

- #11569: Remove hash type encoding